new url-build logic