@@ -5,6 +5,7 @@ import java.io.InputStreamReader;
 import java.lang.reflect.Type;
 import java.net.URI;
 import java.net.URL;
+import java.util.Arrays;
 import java.util.Map;
 
 import javax.net.ssl.HttpsURLConnection;
@@ -13,26 +14,28 @@ import com.google.gson.Gson;
 
 public abstract class RiotAPI {
 	
-	private String protocol;
-	private String urlBase;
-	private String urlSuffix;
+	private String urlProtocol;
+	private String urlHost;
+	private String urlPath;
+	private String urlQuery;
 	private String region;
 	private String apiVersion;
-	private String category;
+	private String apiCategory;
 	private Gson gson;
 
-	public RiotAPI(final Map<String, String> apiValues, final String apiVersion, final String category){
-		protocol = apiValues.get("protocol");
-		urlSuffix = apiValues.get("urlSuffix");
-		region = apiValues.get("region");
+	public RiotAPI(final Map<String, String> apiValues, final String apiVersion, final String apiCategory){
+		urlProtocol = apiValues.get("urlProtocol");
+		urlHost = apiValues.get("urlHost");
+		urlPath = apiValues.get("urlPath");
+		urlQuery = "api_key=" + apiValues.get("apiKey");
+		setRegion(apiValues.get("region"));	
 		this.apiVersion = apiVersion;
-		this.category = category;
-		urlBase = apiValues.get("urlBase").replace("{region}",region).replace("{apiVersion}","v"+apiVersion).replace("{category}",category);	
+		this.apiCategory = apiCategory;
 		gson = new Gson();
 	}
 	
-	protected <T> T getObjectFromJsonUrl(String rawUrl, Class<T> classOf) throws Exception{
-		URL obj = encodeURL(rawUrl);
+	protected <T> T getObjectFromJsonUrl(String urlPath, String urlQuery, Class<T> classOf) throws Exception{
+		URL obj = encodeUrl(urlPath, urlQuery);
 		HttpsURLConnection conn = (HttpsURLConnection) obj.openConnection();
 		conn.setRequestMethod("GET");
 		int responseCode = conn.getResponseCode();
@@ -49,8 +52,8 @@ public abstract class RiotAPI {
 		return object;
 	}
 	
-	protected <T> T getObjectFromJsonUrl(String rawUrl, Type typeOf) throws Exception{
-		URL obj = encodeURL(rawUrl);
+	protected <T> T getObjectFromJsonUrl(String urlPath, String urlQuery, Type typeOf) throws Exception{
+		URL obj = encodeUrl(urlPath, urlQuery);
 		HttpsURLConnection conn = (HttpsURLConnection) obj.openConnection();
 		conn.setRequestMethod("GET");
 		int responseCode = conn.getResponseCode();
@@ -66,53 +69,31 @@ public abstract class RiotAPI {
 		
 		return object;
 	}
+
 	
-	//method previous been used to return JSON as String
-	protected String getJsonStringFromUrl(String rawUrl) throws Exception{
-		URL obj = encodeURL(rawUrl);
-		HttpsURLConnection conn = (HttpsURLConnection) obj.openConnection();
-		conn.setRequestMethod("GET");
-		int responseCode = conn.getResponseCode();
-
-		BufferedReader reader = new BufferedReader(new InputStreamReader(conn.getInputStream()));		
-		StringBuilder builder = new StringBuilder();
-		String jsonString = "";
-		
-		while ((jsonString = reader.readLine()) != null) {
-		    builder.append(jsonString);
-		}
-		reader.close();
-		conn.disconnect();
-		jsonString = builder.toString();
-		
-		System.out.println("Sending 'GET' request to URL : " + obj.toString());
-		System.out.println("Response Code : " + responseCode);
-		System.out.println("Content lenght : " + jsonString.length());
-
-		return jsonString;
-	}
-
-	private URL encodeURL(String rawUrl) throws Exception{
-		URL url = new URL(protocol+rawUrl);
-		URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), url.getQuery(), url.getRef());
-		
+	private URL encodeUrl(String urlPath, String urlQuery) throws Exception{
+		URI uri = new URI(urlProtocol, null, region+urlHost, -1, urlPath , urlQuery, null);
 		return uri.toURL();
 	}
 	
-	protected String getUrlBase(){
-		return urlBase;
+	public void setRegion(String region){
+		region.trim().toLowerCase();
+		final String[] regions = new String[] {"br","eune","euw","kr","lan","las","na","oce","ru","tr"};
+		if (Arrays.asList(regions).contains(region)){
+			this.region = region;
+		}
+	}	
+	
+	protected String buildUrlPath(){
+		return urlPath + region + apiVersion + apiCategory;
 	}
-	protected String getUrlSuffix(){
-		return urlSuffix;
-	}
+	
 	public String getRegion(){
 		return region;
 	}
-	protected String getApiVersion(){
-		return apiVersion;
+	protected String getUrlQuery(){
+		return urlQuery;
 	}
-	protected String getCategory(){
-		return category;
-	}
+
 
 }
